Correction du sliding menu en supprimant bootstrap de l'affichage. Images médaillon alignées correctement même en petit taille de fenêtre.

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,4 +1,5 @@
 #mainPage {
+    position: relative;
     background-color: #000000;
     background: url("/images/mainpage_wall.jpg");
     width: 100vw;
